add test for frontend components