@@ -3,18 +3,15 @@ package com.pokemon.demo.poke_api.service;
 import com.pokemon.demo.poke_api.domain.Pokemon;
 import com.pokemon.demo.poke_api.exception.PokemonNotFoundException;
 import com.pokemon.demo.poke_api.provider.PokemonProvider;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class PokemonService {
 
     private final PokemonProvider pokemonProvider;
 
-    @Autowired
     public PokemonService(final PokemonProvider pokemonProvider) {
         this.pokemonProvider = pokemonProvider;
     }
@@ -35,7 +32,7 @@ public class PokemonService {
 
         return pokemonProvider.findAll().stream()
                 .filter(p -> p.getName().toLowerCase().contains(lowerName))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Pokemon> findByType(String type) {
@@ -44,6 +41,6 @@ public class PokemonService {
         return pokemonProvider.findAll().stream()
                 .filter(p -> p.getTypes().stream()
                         .anyMatch(t -> t.toLowerCase().contains(lowerType)))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
